# openapi-spec-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
model/: Cargo.toml
model/src/: error.rs  gen.rs  gen_code.rs  main.rs
schema/: Cargo.toml
schema/examples/: oas-endpoints.rs  oas-request-dump.rs  oas-response-dump.rs  oas-schema-dump.rs
schema/src/: lib.rs  model.rs
