[package]
name = "openapi-spec-model"
keywords = ["openapi"]
# https://crates.io/category_slugs
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openapi-spec-schema = { path = "../schema" }
proc-macro2 = "1.0.37"
quote = "1.0.18"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
