[package]
name = "openapi-spec-schema"
keywords = ["openapi"]
# https://crates.io/category_slugs
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.107"
serde_yaml = "0.9.25"
